--- a/HotelManagement/HotelManagement/Views/ServicesView.xaml
+++ b/HotelManagement/HotelManagement/Views/ServicesView.xaml
@@ -6,24 +6,83 @@
              xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             x:Name="servicesView">
     <UserControl.DataContext>
         <viewModels:ServicesViewModel/>
     </UserControl.DataContext>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="99"/>
-            <RowDefinition Height="1"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
-                <TextBox
+        <materialDesign:DialogHost Name="dialog" Identifier="AccountDialog" CloseOnClickAway="True" 
+            DialogTheme="Inherit" IsOpen="{Binding IsOpenDialog}">
+        <materialDesign:DialogHost.DialogContent>
+            <Grid Background="White">
+                <Grid Height="280" Width="300">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="New service" Margin="8" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Row="1" Text="{Binding Title}" Margin="8 4 4 12"/>
+                        <TextBox Grid.Row="2" Margin="4"
+                                Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                VerticalAlignment="Top" 
+                                AcceptsReturn="True" Text="{Binding ServiceName}"
+                                materialDesign:HintAssist.Hint="Service's name"/>
+                        <TextBox Grid.Row="3" Margin="4"
+                            Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                            VerticalAlignment="Top" 
+                            AcceptsReturn="True" Text="{Binding ServicePrice}"
+                            materialDesign:HintAssist.Hint="Service's price"/>
+                        <TextBlock Grid.Row="4" Text="{Binding ErrorMessage}" Margin="0 0 0 4" HorizontalAlignment="Center" FontSize="14" Foreground="Red"/>
+                        <Grid Grid.Row="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="0" HorizontalAlignment="Center" Margin="4"
+                            Style="{StaticResource MaterialDesignRaisedButton}"
+                            Command="{Binding SaveServiceCommand}">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="ContentSave" Width="18" Height="18" 
+                                        VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2 2 4 2"/>
+                            <TextBlock Text="Save" FontSize="18"/>
+                        </StackPanel>
+                        </Button>
+                            <Button Grid.Column="1" HorizontalAlignment="Center" Margin="4"
+                            Style="{StaticResource MaterialDesignRaisedButton}"
+                            Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
+                                <StackPanel Orientation="Horizontal">
+                                    <materialDesign:PackIcon Kind="CloseCircle" Width="18" Height="18" 
+                                        VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2 2 4 2"/>
+                                    <TextBlock Text="Close" FontSize="18"/>
+                                </StackPanel>
+                        </Button>
+                    </Grid>
+                </Grid>
+            </Grid>
+        </materialDesign:DialogHost.DialogContent>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="99"/>
+                    <RowDefinition Height="1"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0" Background="{StaticResource PrimaryLightBrush}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <TextBox
+                    x:Name="tbSearch"
+                    Text="{Binding ContentSearch, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     Width="200"
                     FontSize="14"
                     Height="40"
@@ -31,112 +90,114 @@
                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Left"
-                    Margin="35 0"/> 
-            </Grid>
-            <Grid Grid.Column="1">
-                <Button
-                    Background="{StaticResource PrimaryDarkBrush}"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Right"
-                    Margin="35 0"
-                    Width="140"
-                    Height="40"
-                    Style="{StaticResource MaterialDesignRaisedButton}"
-                    ToolTip="New Service"
-                    Content="New Service"  />
-            </Grid>
-        </Grid>
-        <Grid Grid.Row="1" Background="{StaticResource PrimaryLightBrush}">
-            <Rectangle Margin="35 0" Fill="{StaticResource PrimaryDarkBrush}"/>
-        </Grid>
-        <Grid Grid.Row="2" Background="{StaticResource PrimaryLightBrush}">
-            <DataGrid
+                    Margin="35 0">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="TextChanged">
+                                    <i:InvokeCommandAction Command="{Binding SearchServiceCommand}"
+                                                   CommandParameter= "{Binding ElementName=servicesView}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </TextBox>
+                    </Grid>
+                    <Grid Grid.Column="1">
+                        <Button
+                            Background="{StaticResource PrimaryDarkBrush}"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Right"
+                            Margin="35 0"
+                            Width="140"
+                            Height="40"
+                            Style="{StaticResource MaterialDesignRaisedButton}"
+                            ToolTip="New Service"
+                            Content="New Service"
+                            Command="{Binding AddNewServiceCommand}"/>  
+                    </Grid>
+                </Grid>
+                <Grid Grid.Row="1" Background="{StaticResource PrimaryLightBrush}">
+                    <Rectangle Margin="35 0" Fill="{StaticResource PrimaryDarkBrush}"/>
+                </Grid>
+                <Grid Grid.Row="2" Background="{StaticResource PrimaryLightBrush}">
+                    <DataGrid
                  x:Name="dataGridServices" Margin="35"
-                 ItemsSource="{Binding ItemSourceServices}"
+                 ItemsSource="{Binding ItemSourceServices, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 SelectedItem="{Binding SelectedService, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  CanUserResizeColumns="False" IsReadOnly="False"
                  CanUserAddRows="False" AutoGenerateColumns="False"
                  BorderThickness="1" BorderBrush="{StaticResource PrimaryDarkBrush}">
-                <DataGrid.Columns>
-                    <materialDesign:DataGridTextColumn
+                        <DataGrid.Columns>
+                            <materialDesign:DataGridTextColumn
                             Header="Id" Binding="{Binding id}" 
                             IsReadOnly="True">
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="{x:Type DataGridColumnHeader}"
+                                <DataGridTextColumn.HeaderStyle>
+                                    <Style TargetType="{x:Type DataGridColumnHeader}"
                                        BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    </Style>
+                                </DataGridTextColumn.HeaderStyle>
 
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="{x:Type TextBlock}"
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="{x:Type TextBlock}"
                                        BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </materialDesign:DataGridTextColumn>
-                    <materialDesign:DataGridTextColumn
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </materialDesign:DataGridTextColumn>
+                            <materialDesign:DataGridTextColumn
                             Header="Name" Binding="{Binding name}" 
                             >
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="{x:Type DataGridColumnHeader}"
+                                <DataGridTextColumn.HeaderStyle>
+                                    <Style TargetType="{x:Type DataGridColumnHeader}"
                                        BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    </Style>
+                                </DataGridTextColumn.HeaderStyle>
 
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="{x:Type TextBlock}"
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="{x:Type TextBlock}"
                                        BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </materialDesign:DataGridTextColumn>
-                    <materialDesign:DataGridTextColumn
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </materialDesign:DataGridTextColumn>
+                            <materialDesign:DataGridTextColumn
                             Header="Price" Binding="{Binding price}" 
                             >
-                        <DataGridTextColumn.HeaderStyle>
-                            <Style TargetType="{x:Type DataGridColumnHeader}"
+                                <DataGridTextColumn.HeaderStyle>
+                                    <Style TargetType="{x:Type DataGridColumnHeader}"
                                        BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.HeaderStyle>
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    </Style>
+                                </DataGridTextColumn.HeaderStyle>
 
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="{x:Type TextBlock}"
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="{x:Type TextBlock}"
                                        BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}">
-                                <Setter Property="VerticalAlignment" Value="Center"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </materialDesign:DataGridTextColumn>
-                    <DataGridTemplateColumn>
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Width="40" Padding="0" Background="#637BCF"
-                                        Style="{StaticResource MaterialDesignRaisedButton}">
-                                    <materialDesign:PackIcon Kind="Tools" />
-                                </Button>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                    <DataGridTemplateColumn >
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Width="40" Padding="0" Background="#637BCF"
-                                        Style="{StaticResource MaterialDesignRaisedButton}">
-                                    <materialDesign:PackIcon Kind="Delete"/>
-                                </Button>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                
-                </DataGrid.Columns>
-            </DataGrid>
-        </Grid>
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </materialDesign:DataGridTextColumn>
+                            <DataGridTemplateColumn >
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Width="40" Padding="0" Background="#637BCF"
+                                        Style="{StaticResource MaterialDesignRaisedButton}"
+                                        Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.DeleteServiceCommand}">
+                                            <materialDesign:PackIcon Kind="Delete"/>
+                                        </Button>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
+            </Grid>
+        </materialDesign:DialogHost>
     </Grid>
 </UserControl>
