--- a/HotelManagement/HotelManagement/Views/Invoice/InvoiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/Invoice/InvoiceView.xaml
@@ -99,6 +99,11 @@
                                     <TextBlock Text="ID" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="8 0 0 0"/>
                                 </GridViewColumn.Header>
                             </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding date_created}">
+                                <GridViewColumn.Header>
+                                    <TextBlock Text="Date Created" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="8 0 0 0"/>
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
                             <GridViewColumn DisplayMemberBinding="{Binding arrival}">
                                 <GridViewColumn.Header>
                                     <TextBlock Text="Arrival" Foreground="Black" FontSize="14" FontWeight="SemiBold" Margin="8 0 0 0"/>
@@ -184,7 +189,7 @@
                         VerticalAlignment="Center"/>
                     <TextBlock Text="{Binding Name}" FontSize="18" VerticalAlignment="Center"/>
                 </StackPanel>
-                <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch" Margin="4 2 0 10">
+                <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch" Margin="4 2 0 6">
                     <StackPanel Orientation="Horizontal" Margin="8 2 2 2">
                         <TextBlock Text="ID Card:" Width="55" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                         <TextBlock Text="{Binding Identity}" Width="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -240,7 +245,7 @@
                         <ColumnDefinition Width="43*"/>
                         <ColumnDefinition Width="357*"/>
                     </Grid.ColumnDefinitions>
-                    <ScrollViewer VerticalScrollBarVisibility="Hidden" Margin="4,1,4,10.2" Grid.ColumnSpan="2">
+                    <ScrollViewer VerticalScrollBarVisibility="Hidden" Margin="4 1 4 4" Grid.ColumnSpan="2">
                         <ItemsControl ItemsSource="{Binding Guests}" HorizontalAlignment="left" Margin="0 5">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
@@ -354,7 +359,7 @@
                     </ScrollViewer>
                 </Grid>
                 <!-- Total -->
-                <Grid Grid.Row="5" Margin="0 0 0 12">
+                <Grid Grid.Row="5" Margin="0 0 0 6">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock Text="Total:" FontSize="18" FontWeight="Bold" 
                             Foreground="{StaticResource PrimaryHueDarkBrush}" 
@@ -438,7 +443,7 @@
                     </ScrollViewer>
                 </Grid>
                 <!-- Total -->
-                <Grid Grid.Row="5" Margin="0 0 0 12">
+                <Grid Grid.Row="5" Margin="0 0 0 6">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock Text="Total:" FontSize="18" FontWeight="Bold" 
                             Foreground="{StaticResource PrimaryHueDarkBrush}" 
